Resolve grid layout issue

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 :root {
-    --grid-size: 4;
+    --grid-size: 10;
 }
 
 #container {
